<resources>
    <!-- Main Activity -->
    <string name="app_name">Send Meal</string>
    <string name="required_fields1">* Campos obligatorios</string>
    <string name="required_fields2">*</string>
    <string name="name">Nombre</string>
    <string name="surname">Apellido</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="password2">Repetir contraseña</string>
    <string name="cardnumber">Numero de tarjeta</string>
    <string name="ccv">CCV</string>
    <string name="expiration_month">Mes</string>
    <string name="expiration_year">Año</string>
    <string name="card_type">Tipo de tarjeta</string>
    <string name="credit_card">Crédito</string>
    <string name="debit_card">Débito</string>
    <string name="cbu">CBU</string>
    <string name="alias_cbu">Alias CBU</string>
    <string name="expiration_date">Fecha de vencimiento</string>
    <string name="load_money">Realizar carga inicial?</string>
    <string name="seekbar">Crédito inicial</string>
    <string name="accept_terms">Aceptar los términos y condiciones</string>
    <string name="Register">REGISTRAR</string>
    <string name="initial_amount">$ 0</string>
    <string name="toolbarMain_title">Registrarse</string>

    <string name="error_no_coinciden">Las contraseñas no coinciden</string>
    <string name="error_initial_amount">El monto debe ser mayor a 0 pesos </string>
    <string name="error_email">Email incorrecto </string>
    <string name="error_expirationdate">La fecha de vencimiento debe ser mayor a 3 meses</string>
    <string name="error_cbu">Ingrese un CBU válido</string>
    <string name="exito">Registro exitoso</string>


    <!-- Home Activity -->
    <string name="menu_welcome">Bienvenido</string>
    <string name="toolbar_title">Menú</string>
    <string name="menu_register">Registrarme</string>
    <string name="menu_createitem">Crear item</string>
    <string name="menu_listitems">Lista de items</string>

    <!-- New Dish Activity -->
    <string name="new_dish">Complete los datos</string>
    <string name="dish_name">Nombre del plato</string>
    <string name="dish_description">Descripción</string>
    <string name="photo_description">Agrega una imagen</string>
    <string name="dish_price">Precio</string>
    <string name="dish_calories">Calorías</string>
    <string name="dish_save">Guardar</string>
    <string name="error_incomplete">Complete todos los campos</string>
    <string name="error_duplicate">El plato ya existe</string>
    <string name="successful_load">Carga exitosa</string>
    <string name="toolbarNewDish_title">Agregar plato</string>

    <!-- List Dishes Activity -->
    <string name="toolbarListDishes_title">Platos</string>

    <!-- Pedido Activity Activity -->
    <string name="menu_newOrder">Nuevo pedido</string>
    <string name="adress">Dirección</string>
    <string name="toolbarPedido_title">Nuevo pedido</string>
    <string name="tv_delivery">Método de entrega</string>
    <string name="tv_dishes">Platos incluidos</string>
    <string name="rbEnvio">Envio</string>
    <string name="rbTakeaway">Take away</string>
    <string name="button_AddDish">Agregar platos</string>
    <string name="button_Confirm">Confirmar pedido</string>
    <string name="button_Maps">Agregar dirección</string>
    <string name="error">Debe completar el campo</string>
    <string name="error_Final">Complete los campos</string>
    <string name="notificaciónTitulo">Send Meal</string>
    <string name="notificaciónDescripción">Su pedido ha sido confirmado</string>


    <!-- Mapa -->
    <string name="google_maps_key"> AIzaSyDDh6V0Ba6Q927jPc75p-BfoY03zIW81ks  </string>
    <string name="button_ConfirmMapa">Confirmar Dirección</string>
</resources>