<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".PedidoActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarPedido_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="15dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <TextView
            android:id="@+id/toolbarPedido_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/nunito_sans_black_italic"
            android:text="@string/toolbarPedido_title"
            android:textColor="@color/colorTitle"
            android:textSize="@dimen/tamaño_fuente4" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#FFFFFF"
            android:elevation="15dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="30dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_sans"
                    android:gravity="center"
                    android:text="@string/new_dish" />


                <EditText
                    android:id="@+id/email_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/nunito_sans_extralight"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/tamaño_fuente" />

                <EditText
                    android:id="@+id/adress_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/nunito_sans_extralight"
                    android:hint="@string/adress"
                    android:inputType="textPersonName"
                    android:textSize="@dimen/tamaño_fuente" />

                <TextView
                    android:id="@+id/tv_eleccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_margin"
                    android:layout_marginBottom="@dimen/layout_margin"
                    android:fontFamily="@font/nunito_sans"
                    android:text="@string/tv_delivery"
                    android:textSize="@dimen/tamaño_fuente2" />

                <RadioGroup
                    android:id="@+id/rg_radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/envio_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/nunito_sans_extralight"
                        android:text="@string/rbEnvio"
                        android:textSize="@dimen/tamaño_fuente2"
                        android:checked="true"/>

                    <RadioButton
                        android:id="@+id/takeAway_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/nunito_sans_extralight"
                        android:text="@string/rbTakeaway"
                        android:textSize="@dimen/tamaño_fuente2" />

                </RadioGroup>

                <TextView
                    android:id="@+id/tv_dishes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_margin"
                    android:layout_marginBottom="@dimen/layout_margin"
                    android:fontFamily="@font/nunito_sans"
                    android:text="@string/tv_dishes"
                    android:textSize="@dimen/tamaño_fuente2" />


                <ListView
                    android:id="@+id/lv_dishes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" >

                </ListView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/amountDishes_id"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@font/nunito_sans"
                        android:textSize="@dimen/tamaño_fuente2" />

                    <TextView
                        android:id="@+id/totalPrice_id"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@font/nunito_sans"
                        android:textSize="@dimen/tamaño_fuente2" />
                </LinearLayout>


                <Button
                    android:id="@+id/button_addDishes_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_margin"
                    android:backgroundTint="@color/colorAccent"
                    android:fontFamily="@font/nunito_sans"
                    android:text="@string/button_AddDish"
                    android:textSize="@dimen/tamaño_fuente" />



                <Button
                    android:id="@+id/button_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:backgroundTint="@color/colorAccent"
                    android:fontFamily="@font/nunito_sans"
                    android:text="@string/button_Confirm"
                    android:textSize="@dimen/tamaño_fuente" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>



</LinearLayout>