<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_activity_main"
    android:orientation="vertical"
    tools:context=".NewDishActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarNewDish_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="15dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <TextView
            android:id="@+id/toolbarNewDish_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/nunito_sans_black_italic"
            android:text="@string/toolbarNewDish_title"
            android:textColor="@color/colorTitle"
            android:textSize="@dimen/tamaño_fuente4" />
    </androidx.appcompat.widget.Toolbar>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#FFFFFF"
            android:elevation="15dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="30dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/new_dish" />


                <EditText
                    android:id="@+id/dishName_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_margin3"
                    android:layout_marginBottom="@dimen/layout_margin4"
                    android:ems="10"
                    android:hint="@string/dish_name"
                    android:inputType="textPersonName"
                    android:theme="@style/Campos" />

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dish_description" />
                <!--android:theme="@style/Subtitulo" /> -->

                <EditText
                    android:id="@+id/dishDescription_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    android:theme="@style/Campos" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_margin5"
                    android:layout_marginBottom="@dimen/layout_margin5"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/dishPrice_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/dish_price"
                        android:inputType="number"
                        android:theme="@style/Campos" />

                    <EditText
                        android:id="@+id/dishCalories_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/dish_calories"
                        android:inputType="number"
                        android:theme="@style/Campos" />

                </LinearLayout>

                <Button
                    android:id="@+id/button_saveDish_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dish_save" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>